@@ -280,8 +280,8 @@ public class JNLPRuntime {
         if (isHeadless())
             return null;
 
-        File baseDir = InstallDialog.getInstallDir();
-        if (baseDir == null)
+        File baseDir = new File(System.getProperty("user.home") + "/.netx/");
+	if (!baseDir.mkdir())
             return null;
 
         props.setProperty("basedir", baseDir.toString());
