@@ -1,3 +1,10 @@
+2009-05-11  Lillian Angel  <langel@redhat.com>
+
+	* rt/net/sourceforge/jnlp/runtime/JNLPRuntime.java
+	(getDefaultBaseDir): Set basedir for netx applications to ~/.netx,
+	rather than asking. Now consistant with the plugin.
+	* rt/net/sourceforge/jnlp/runtime/InstallDialog.java: Removed.
+
 2009-05-08  Gary Benson  <gbenson@redhat.com>
 
 	* Makefile.am: Always apply Zero and Shark patches.
